# compio

./: .commitlintrc.json  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  README.md  azure-pipelines.yml  flake.nix  release-plz.toml  rustfmt.toml
.config/: nextest.toml
compio/: CHANGELOG.md  Cargo.toml
compio-buf/: CHANGELOG.md  Cargo.toml  README.md
compio-buf/src/: buf_result.rs  buf_wrapper.rs  io.rs  io_buf.rs  io_buffer.rs  io_slice.rs  io_vec_buf.rs  iter.rs  lib.rs  slice.rs  uninit.rs  with_buf.rs
compio-compat/: CHANGELOG.md  Cargo.toml  README.md
compio-compat/src/: lib.rs
compio-compat/src/sys/: mod.rs  windows.rs
compio-compat/tests/: fs.rs  net.rs
compio-dispatcher/: CHANGELOG.md  Cargo.toml  README.md
compio-dispatcher/src/: lib.rs  unix.rs
compio-dispatcher/tests/: listener.rs
compio-driver/: CHANGELOG.md  Cargo.toml  README.md  build.rs
compio-driver/scripts/memleak/: asan.sh
compio-driver/src/: asyncify.rs  buffer_pool.rs  cancel.rs  control.rs  driver_type.rs  fallback_buffer_pool.rs  fd.rs  key.rs  lib.rs  macros.rs  op.rs  panic.rs  sys_slice.rs  thread_map.rs
compio-driver/src/asyncify/: fallback.rs  mod.rs  windows.rs
compio-driver/src/buffer_pool/: fallback.rs  fusion.rs  iour.rs  mod.rs
compio-driver/src/fd/: mod.rs  sync.rs  unsync.rs
compio-driver/tests/: asyncify.rs  buffer_pool.rs  file.rs  multi_fd.rs  op.rs  personality.rs  pipe2.rs  proactor.rs  send_zc.rs  splice.rs
compio-executor/: CHANGELOG.md  Cargo.toml  README.md
compio-executor/benches/: schedule.rs
compio-executor/src/: join_handle.rs  lib.rs  queue.rs  task.rs  util.rs  waker.rs
compio-executor/tests/: executor.rs  loom.rs
compio-fs/: CHANGELOG.md  Cargo.toml  README.md  build.rs
compio-fs/src/: async_fd.rs  file.rs  lib.rs  named_pipe.rs  open_options.rs  pipe.rs  splice.rs
compio-fs/tests/: buffer_pool.rs  dir.rs  file.rs  splice.rs  utils.rs
compio-h2/: CHANGELOG.md  Cargo.toml  README.md  build.rs
compio-h2/benches/: codec.rs  flamegraph_h2_request.rs  flamegraph_hpack.rs  rpc.rs  support.rs
compio-h2/examples/: h2-client-tls.rs  h2-client.rs  h2-server-tls.rs  h2-server.rs  soak_h2.rs
compio-h2/fuzz/: .gitignore  Cargo.toml
compio-h2/scripts/: README.md
compio-h2/src/: builder.rs  client.rs  error.rs  lib.rs  server.rs  share.rs  state.rs  tls.rs
compio-h2/tests/: basic.rs  error.rs  flow_control.rs  fuzz.rs  keepalive.rs  lifecycle.rs  security.rs  settings.rs  streaming.rs  trailers.rs
compio-http/: Cargo.toml
compio-http-client/: Cargo.toml
compio-http-client/examples/: client.rs
compio-http-client/src/: client.rs  into_url.rs  lib.rs  request.rs  response.rs  util.rs
compio-http-client/tests/: client.rs
compio-http/examples/: client.rs
compio-http/src/: backend.rs  client.rs  connector.rs  executor.rs  lib.rs  request.rs  response.rs  server.rs  service.rs  stream.rs  util.rs
compio-http/tests/: client.rs
compio-io/: CHANGELOG.md  Cargo.toml  README.md
compio-io/src/: buffer.rs  compat.rs  lib.rs  read.rs  socket.rs  split.rs  util.rs  vectored.rs  write.rs
compio-io/tests/: ancillary.rs  compat.rs  framed.rs  io.rs
compio-log/: CHANGELOG.md  Cargo.toml  README.md
compio-log/src/: dummy.rs  lib.rs
compio-log/tests/: test.rs
compio-macros/: CHANGELOG.md  Cargo.toml  README.md
compio-macros/src/: item_fn.rs  lib.rs  main_fn.rs  test_fn.rs
compio-native-tls/: Cargo.toml
compio-native-tls/src/: adapter.rs  lib.rs  stream.rs  wrapper.rs
compio-net/: CHANGELOG.md  Cargo.toml  README.md
compio-net/benches/: tcp_write.rs
compio-net/src/: lib.rs  linux_ext.rs  opts.rs  poll_fd.rs  resolve.rs  socket.rs  split.rs  stream.rs  tcp.rs  udp.rs  unix.rs
compio-net/tests/: buffer_pool.rs  cmsg.rs  incoming.rs  poll.rs  resolve.rs  runtime_wake.rs  split.rs  tcp_accept.rs  tcp_connect.rs  tcp_disconnect.rs  tcp_write_threshold.rs  udp.rs  unix_stream.rs  zero_copy.rs
compio-process/: CHANGELOG.md  Cargo.toml  README.md
compio-process/src/: lib.rs  linux.rs  unix.rs  windows.rs
compio-process/tests/: process.rs
compio-quic/: CHANGELOG.md  Cargo.toml  README.md  build.rs
compio-quic/benches/: quic.rs
compio-quic/examples/: client.rs  http3-client.rs  http3-server.rs  quic-client.rs  quic-dispatcher.rs  quic-server.rs  server.rs
compio-quic/src/: builder.rs  connection.rs  endpoint.rs  incoming.rs  lib.rs  recv_stream.rs  send_stream.rs  socket.rs
compio-quic/tests/: basic.rs  control.rs  echo.rs
compio-runtime/: CHANGELOG.md  Cargo.toml  README.md  build.rs
compio-runtime/src/: affinity.rs  attacher.rs  buffer_pool.rs  cancel.rs  event.rs  key.rs  lib.rs  opt_waker.rs  time.rs
compio-runtime/tests/: custom_loop.rs  drop.rs  event.rs  no_abort.rs  panic.rs  waker.rs
compio-signal/: CHANGELOG.md  Cargo.toml  README.md
compio-signal/src/: lib.rs  linux.rs  unix.rs  windows.rs
compio-tls/: CHANGELOG.md  Cargo.toml  README.md
compio-tls/src/: adapter.rs  lib.rs  maybe.rs  native.rs  py_ossl.rs  rtls.rs  stream.rs  wrapper.rs
compio-tls/tests/: connect.rs  echo.rs
compio-util/: Cargo.toml
compio-util/src/: lib.rs  ring_mapped_buffers.rs
compio-utils/: Cargo.toml
compio-utils/src/: lib.rs
compio-ws/: CHANGELOG.md  Cargo.toml  README.md
compio-ws/autobahn/: expected-results.json  fuzzingclient.json  fuzzingserver.json
compio-ws/examples/: autobahn-client.rs  autobahn-server.rs  client.rs  client_tls.rs  echo_server.rs  echo_server_tls.rs  ws_split.rs
compio-ws/scripts/: autobahn-client.sh  autobahn-server.sh
compio-ws/src/: compat.rs  growable_sync_stream.rs  lib.rs  rustls.rs  stream.rs  tls.rs
compio-ws/tests/: websocket.rs
compio/benches/: fs.rs  named_pipe.rs  net.rs
compio/examples/: basic.rs  dispatcher.rs  driver.rs  named_pipe.rs  net.rs  resolve.rs  tick.rs  unix.rs
compio/src/: attacher.rs  lib.rs  named_pipe.rs  op.rs  time.rs
compio/tests/: accept.rs  dispatcher.rs  dns.rs  driver.rs  event.rs  file.rs  io.rs  kqueue_repro.rs  macros.rs  runtime.rs  tcp_accept.rs  tcp_connect.rs  udp.rs  unix_stream.rs
(+436 files in other folders)
