[workspace]
members = [
    "compio",
    "compio-buf",
    "compio-dispatcher",
    "compio-driver",
    "compio-fs",
    "compio-io",
    "compio-log",
    "compio-macros",
    "compio-net",
    "compio-process",
    "compio-quic",
    "compio-runtime",
    "compio-signal",
    "compio-tls",
    "compio-ws",
]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Berrysoft <Strawberry_Str@hotmail.com>"]
license = "MIT"
repository = "https://github.com/compio-rs/compio"

[workspace.dependencies]
compio-buf = { path = "./compio-buf", version = "0.8.0" }
compio-driver = { path = "./compio-driver", version = "0.11.1", default-features = false }
compio-runtime = { path = "./compio-runtime", version = "0.11.0" }
compio-macros = { path = "./compio-macros", version = "0.1.2" }
compio-fs = { path = "./compio-fs", version = "0.11.0" }
compio-io = { path = "./compio-io", version = "0.9.0" }
compio-net = { path = "./compio-net", version = "0.11.0" }
compio-signal = { path = "./compio-signal", version = "0.9.0" }
compio-dispatcher = { path = "./compio-dispatcher", version = "0.10.0" }
compio-log = { path = "./compio-log", version = "0.1.0" }
compio-tls = { path = "./compio-tls", version = "0.9.0", default-features = false }
compio-process = { path = "./compio-process", version = "0.8.0" }
compio-quic = { path = "./compio-quic", version = "0.7.0", default-features = false }
compio-ws = { path = "./compio-ws", version = "0.3.0", default-features = false }

bytes = "1.11.1"
cfg_aliases = "0.2.1"
cfg-if = "1.0.4"
criterion = "0.8.2"
crossbeam-queue = "0.3.12"
flume = { version = "0.12.0", default-features = false }
futures-channel = "0.3.31"
futures-rustls = { version = "0.26.0", default-features = false }
futures-util = "0.3.31"
libc = "0.2"
native-tls = "0.2.14"
nix = "0.31.1"
once_cell = "1.21.3"
os_pipe = "1.2.3"
paste = "1.0.15"
pin-project-lite = "0.2.16"
rand = "0.10.0"
rustls = { version = "0.23.36", default-features = false }
rustls-platform-verifier = "0.6.2"
rustls-native-certs = "0.8.3"
slab = "0.4.12"
socket2 = "0.6.2"
tempfile = "3.25.0"
tokio = "1.49.0"
tracing-subscriber = "0.3.22"
webpki-roots = "1.0.6"
widestring = "1.2.1"
windows-sys = "0.61.2"
thiserror = "2.0.18"
smallvec = "1.15.1"
synchrony = "0.1.1"

[profile.bench]
debug = true
lto = true
codegen-units = 1
