[workspace]
members = [
    "compio",
    "compio-buf",
    "compio-dispatcher",
    "compio-driver",
    "compio-fs",
    "compio-io",
    "compio-log",
    "compio-macros",
    "compio-net",
    "compio-process",
    "compio-quic",
    "compio-runtime",
    "compio-signal",
    "compio-tls",
    "compio-ws",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/compio-rs/compio"

[workspace.dependencies]
compio-buf = { path = "./compio-buf", version = "0.8.1" }
compio-driver = { path = "./compio-driver", version = "0.12.0", default-features = false }
compio-runtime = { path = "./compio-runtime", version = "0.12.0" }
compio-macros = { path = "./compio-macros", version = "0.2.0" }
compio-fs = { path = "./compio-fs", version = "0.12.0" }
compio-io = { path = "./compio-io", version = "0.9.1" }
compio-net = { path = "./compio-net", version = "0.12.0" }
compio-signal = { path = "./compio-signal", version = "0.10.0" }
compio-dispatcher = { path = "./compio-dispatcher", version = "0.10.1" }
compio-log = { path = "./compio-log", version = "0.2.0" }
compio-tls = { path = "./compio-tls", version = "0.10.0", default-features = false }
compio-process = { path = "./compio-process", version = "0.8.1" }
compio-quic = { path = "./compio-quic", version = "0.8.0", default-features = false }
compio-ws = { path = "./compio-ws", version = "0.3.1", default-features = false }

bytes = "1.7.1"
cfg_aliases = "0.2.1"
cfg-if = "1.0.0"
criterion = "0.8.0"
crossbeam-queue = "0.3.8"
flume = { version = "0.12.0", default-features = false }
futures-channel = "0.3.29"
futures-rustls = { version = "0.26.0", default-features = false }
futures-util = "0.3.29"
libc = "0.2.175"
native-tls = "0.2.13"
compio-py-dynamic-openssl = "0.5.0"
nix = "0.31.1"
once_cell = "1.18.0"
os_pipe = "1.1.4"
paste = "1.0.14"
pin-project-lite = "0.2.16"
rand = "0.10.0"
rustls = { version = "0.23.1", default-features = false }
rustls-platform-verifier = "0.6.0"
rustls-native-certs = "0.8.0"
slab = "0.4.9"
socket2 = "0.6.0"
tempfile = "3.8.1"
tokio = "1.33.0"
tracing-subscriber = "0.3.18"
webpki-roots = "1.0.0"
widestring = "1.0.2"
windows-sys = "0.61.0"
thiserror = "2.0.3"
smallvec = "1.13.2"
synchrony = "0.1.4"

[profile.bench]
debug = true
lto = true
codegen-units = 1
