[package]
name = "compio-buf"
version = "0.2.0-beta.1"
description = "buffer trait for completion based async IO"
categories = ["asynchronous"]
keywords = ["async"]
edition = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg docsrs"]

[dependencies]
bumpalo = { version = "3.14.0", optional = true }
arrayvec = { version = "0.7.4", optional = true }
bytes = { version = "1.5.0", optional = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[features]
# Dependencies
arrayvec = ["dep:arrayvec"]
bumpalo = ["dep:bumpalo"]
bytes = ["dep:bytes"]

# Nightly features
allocator_api = ["bumpalo?/allocator_api"]
read_buf = []
try_trait_v2 = []
nightly = ["allocator_api", "read_buf", "try_trait_v2"]
