[package]
name = "compio-buf"
version = "0.7.1"
description = "Buffer trait for completion based async IO"
categories = ["asynchronous"]
keywords = ["async"]
edition = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bumpalo = { version = "3.14.0", optional = true }
arrayvec = { version = "0.7.4", optional = true }
bytes = { workspace = true, optional = true }
smallvec = { version = "1.13.2", optional = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[features]
# Dependencies
arrayvec = ["dep:arrayvec"]
smallvec = ["dep:smallvec"]
bumpalo = ["dep:bumpalo"]
bytes = ["dep:bytes"]

# Nightly features
allocator_api = []
read_buf = []
try_trait_v2 = []
nightly = ["allocator_api", "read_buf", "try_trait_v2"]
