[package]
name = "compio-buf"
version = "0.8.0"
description = "Buffer trait for completion based async IO"
categories = ["asynchronous"]
keywords = ["async"]
readme = "README.md"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bumpalo = { version = "3.14.0", optional = true }
arrayvec = { version = "0.7.4", optional = true }
bytes = { workspace = true, optional = true }
smallvec = { workspace = true, optional = true }
memmap2 = { version = "0.9.9", optional = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[features]
# Dependencies
arrayvec = ["dep:arrayvec"]
smallvec = ["dep:smallvec"]
bumpalo = ["dep:bumpalo"]
bytes = ["dep:bytes"]
memmap2 = ["dep:memmap2"]

# Nightly features
allocator_api = []
read_buf = []
try_trait_v2 = []
nightly = ["allocator_api", "read_buf", "try_trait_v2"]
