[package]
name = "compio-dispatcher"
version = "0.8.1"
description = "Multithreading dispatcher for compio"
categories = ["asynchronous"]
keywords = ["async", "runtime"]
edition = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Workspace dependencies
compio-driver = { workspace = true }
compio-runtime = { workspace = true }

flume = { workspace = true, default-features = false, features = ["async"] }
futures-channel = { workspace = true }

[dev-dependencies]
compio-buf = { workspace = true }
compio-io = { workspace = true }
compio-net = { workspace = true }
compio-macros = { workspace = true }

futures-util = { workspace = true }
