[package]
name = "compio-dispatcher"
version = "0.10.0"
description = "Multithreading dispatcher for compio"
categories = ["asynchronous"]
keywords = ["async", "runtime"]
readme = "README.md"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Workspace dependencies
compio-driver = { workspace = true }
compio-runtime = { workspace = true }

flume = { workspace = true, default-features = false, features = ["async"] }
futures-channel = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["signal"] }

[dev-dependencies]
compio-buf = { workspace = true }
compio-io = { workspace = true }
compio-net = { workspace = true }
compio-macros = { workspace = true }
compio-signal = { workspace = true }

futures-util = { workspace = true }

[[test]]
name = "listener"
required-features = ["compio-driver/sync"]
