[package]
name = "compio-driver"
version = "0.10.0"
description = "Low-level driver for compio"
categories = ["asynchronous"]
keywords = ["async", "iocp", "io-uring"]
readme = "README.md"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Workspace dependencies
compio-buf = { workspace = true }
compio-log = { workspace = true }

# Utils
cfg-if = { workspace = true }
flume = { workspace = true, default-features = false }
futures-util = { workspace = true }
socket2 = { workspace = true, features = ["all"] }
pin-project-lite = { workspace = true }

# Windows specific dependencies
[target.'cfg(windows)'.dependencies]
once_cell = { workspace = true }
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
] }

# Linux specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
compile_warning = { version = "0.1.0", optional = true }
io-uring = { version = "0.7.0", optional = true }
io_uring_buf_ring = { version = "0.2.2", optional = true }
once_cell = { workspace = true, optional = true }
polling = { version = "3.3.0", optional = true }
paste = { workspace = true }
slab = { workspace = true, optional = true }

# Other platform dependencies
[target.'cfg(all(not(target_os = "linux"), unix))'.dependencies]
polling = "3.3.0"

[target.'cfg(unix)'.dependencies]
crossbeam-queue = { workspace = true }
libc = { workspace = true }

[build-dependencies]
cfg_aliases = { workspace = true }

[features]
default = ["io-uring"]
io-uring = [
    "dep:io-uring",
    "dep:io_uring_buf_ring",
    "dep:slab",
    "dep:once_cell",
]
polling = ["dep:polling", "compio-buf/smallvec"]

fd-sync = []

io-uring-sqe128 = []
io-uring-cqe32 = []

iocp-global = []
iocp-wait-packet = []

# Nightly features
once_cell_try = []
proc_macro_diagnostic = ["dep:compile_warning"]
nightly = ["once_cell_try", "proc_macro_diagnostic"]
