[package]
name = "compio-executor"
version = "0.1.0"
description = "Executor for compio"
categories = ["asynchronous"]
keywords = ["async", "executor"]
readme = "README.md"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
compio-log = { workspace = true }

compio-send-wrapper = { workspace = true }
crossfire = { workspace = true }
slotmap = { workspace = true }

[dev-dependencies]
compio-log = { workspace = true, features = ["enable_log"] }
tracing-subscriber = "0.3.22"

[features]
notify-always = []
