[package]
name = "compio-executor"
version = "0.1.0"
description = "Executor for compio"
categories = ["asynchronous"]
keywords = ["async", "executor"]
readme = "README.md"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
compio-log = { workspace = true }

cfg-if = { workspace = true }
compio-send-wrapper = { workspace = true }
crossbeam-queue = { workspace = true }
slotmap = { workspace = true }

[target.'cfg(loom)'.dependencies]
loom = "0.7"

[dev-dependencies]
compio-log = { workspace = true, features = ["enable_log"] }
tracing-subscriber = "0.3.22"

[features]
notify-always = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
