[package]
name = "compio-executor"
version = "0.1.0-rc.2"
description = "Executor for compio"
categories = ["asynchronous"]
keywords = ["async", "executor"]
readme = "README.md"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
compio-log = { workspace = true }

cfg-if = { workspace = true }
compio-send-wrapper = { workspace = true }
crossbeam-queue = { workspace = true }
slotmap = { workspace = true }

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7", features = ["checkpoint"] }

[dev-dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[target.'cfg(unix)'.dev-dependencies]
nix = { workspace = true, features = ["resource", "signal"] }

[features]
notify-always = []
enable_log = ["compio-log/enable_log"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
