[package]
name = "compio-fs"
version = "0.1.0"
description = "Filesystem IO for compio"
categories = ["asynchronous", "filesystem"]
keywords = ["async", "fs"]
edition = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg docsrs"]

[dependencies]
# Workspace dependencies
compio-buf = { workspace = true, optional = true }
compio-driver = { workspace = true }
compio-runtime = { workspace = true, optional = true }

# Windows specific dependencies
[target.'cfg(windows)'.dependencies]
widestring = "1"
windows-sys = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_SystemServices",
] }

# Windows specific dev dependencies
[target.'cfg(windows)'.dev-dependencies]
windows-sys = { version = "0.48", features = ["Win32_Security_Authorization"] }

# Unix specific dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Shared dev dependencies for all platforms
[dev-dependencies]
compio-runtime = { workspace = true, features = ["time"] }
futures-util = "0.3"

[features]
runtime = ["dep:compio-buf", "dep:compio-runtime"]

# Nightly features
allocator_api = []
nightly = ["allocator_api", "compio-buf?/allocator_api"]
