[package]
name = "compio-io"
version = "0.8.3"
description = "IO traits for completion based async IO"
categories = ["asynchronous"]
keywords = ["async", "io"]
edition = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
compio-buf = { workspace = true, features = ["arrayvec", "bytes"] }
futures-util = { workspace = true, features = ["sink"] }
paste = { workspace = true }
thiserror = { workspace = true, optional = true }
serde = { version = "1.0.219", optional = true }
serde_json = { version = "1.0.140", optional = true }

[dev-dependencies]
compio-runtime = { workspace = true }
compio-macros = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
serde = { version = "1.0.219", features = ["derive"] }
futures-executor = "0.3.30"

[features]
default = []
compat = ["futures-util/io"]

# Codecs
# Serde json codec
codec-serde-json = ["dep:serde", "dep:serde_json", "dep:thiserror"]

# Nightly features
allocator_api = ["compio-buf/allocator_api"]
read_buf = ["compio-buf/read_buf"]
nightly = ["allocator_api", "read_buf"]

[[test]]
name = "compat"
required-features = ["compat"]

[[test]]
name = "framed"
required-features = ["codec-serde-json"]
