[package]
name = "compio-io"
version = "0.9.1"
description = "IO traits for completion based async IO"
categories = ["asynchronous"]
keywords = ["async", "io"]
readme = "README.md"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
compio-buf = { workspace = true, features = ["arrayvec", "bytes"] }
futures-util = { workspace = true, features = ["sink"] }
paste = { workspace = true }
synchrony = { workspace = true, features = ["bilock"] }
thiserror = { workspace = true, optional = true }
serde = { version = "1.0.219", optional = true }
serde_json = { version = "1.0.140", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
serde = { version = "1.0.219", features = ["derive"] }
futures-executor = "0.3.30"

[features]
default = []
compat = ["futures-util/io"]
sync = []

# Codecs
# Serde json codec
codec-serde-json = ["dep:serde", "dep:serde_json", "dep:thiserror"]

# Nightly features
allocator_api = ["compio-buf/allocator_api"]
read_buf = ["compio-buf/read_buf"]
nightly = ["allocator_api", "read_buf"]

[[test]]
name = "compat"
required-features = ["compat"]

[[test]]
name = "framed"
required-features = ["codec-serde-json"]
